# internal/gen/grpc/kong/admin/model/v1/key.pb.go
@@ -1,0 +1,295 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.28.1-devel
+// 	protoc        (unknown)
+// source: kong/admin/model/v1/key.proto
+
+package v1
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type KeyFormat int32
+
+const (
+	KeyFormat_KEY_FORMAT_UNSPECIFIED KeyFormat = 0
+	KeyFormat_KEY_FORMAT_JWK         KeyFormat = 1
+	KeyFormat_KEY_FORMAT_PEM         KeyFormat = 2
+	KeyFormat_KEY_FORMAT_KID         KeyFormat = 3
+)
+
+// Enum value maps for KeyFormat.
+var (
+	KeyFormat_name = map[int32]string{
+		0: "KEY_FORMAT_UNSPECIFIED",
+		1: "KEY_FORMAT_JWK",
+		2: "KEY_FORMAT_PEM",
+		3: "KEY_FORMAT_KID",
+	}
+	KeyFormat_value = map[string]int32{
+		"KEY_FORMAT_UNSPECIFIED": 0,
+		"KEY_FORMAT_JWK":         1,
+		"KEY_FORMAT_PEM":         2,
+		"KEY_FORMAT_KID":         3,
+	}
+)
+
+func (x KeyFormat) Enum() *KeyFormat {
+	p := new(KeyFormat)
+	*p = x
+	return p
+}
+
+func (x KeyFormat) String() string {
+	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
+}
+
+func (KeyFormat) Descriptor() protoreflect.EnumDescriptor {
+	return file_kong_admin_model_v1_key_proto_enumTypes[0].Descriptor()
+}
+
+func (KeyFormat) Type() protoreflect.EnumType {
+	return &file_kong_admin_model_v1_key_proto_enumTypes[0]
+}
+
+func (x KeyFormat) Number() protoreflect.EnumNumber {
+	return protoreflect.EnumNumber(x)
+}
+
+// Deprecated: Use KeyFormat.Descriptor instead.
+func (KeyFormat) EnumDescriptor() ([]byte, []int) {
+	return file_kong_admin_model_v1_key_proto_rawDescGZIP(), []int{0}
+}
+
+type Key struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Id        string    `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
+	CreatedAt int32     `protobuf:"varint,2,opt,name=created_at,json=createdAt,proto3" json:"created_at,omitempty"`
+	UpdatedAt int32     `protobuf:"varint,3,opt,name=updated_at,json=updatedAt,proto3" json:"updated_at,omitempty"`
+	Tags      []string  `protobuf:"bytes,4,rep,name=tags,proto3" json:"tags,omitempty"`
+	Set       string    `protobuf:"bytes,5,opt,name=set,proto3" json:"set,omitempty"`
+	Name      string    `protobuf:"bytes,6,opt,name=name,proto3" json:"name,omitempty"`
+	Kid       string    `protobuf:"bytes,7,opt,name=kid,proto3" json:"kid,omitempty"`
+	Jwk       string    `protobuf:"bytes,8,opt,name=jwk,proto3" json:"jwk,omitempty"`
+	Pem       string    `protobuf:"bytes,9,opt,name=pem,proto3" json:"pem,omitempty"`
+	KeyFormat KeyFormat `protobuf:"varint,10,opt,name=key_format,json=keyFormat,proto3,enum=kong.admin.model.v1.KeyFormat" json:"key_format,omitempty"`
+}
+
+func (x *Key) Reset() {
+	*x = Key{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_kong_admin_model_v1_key_proto_msgTypes[0]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *Key) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*Key) ProtoMessage() {}
+
+func (x *Key) ProtoReflect() protoreflect.Message {
+	mi := &file_kong_admin_model_v1_key_proto_msgTypes[0]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use Key.ProtoReflect.Descriptor instead.
+func (*Key) Descriptor() ([]byte, []int) {
+	return file_kong_admin_model_v1_key_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *Key) GetId() string {
+	if x != nil {
+		return x.Id
+	}
+	return ""
+}
+
+func (x *Key) GetCreatedAt() int32 {
+	if x != nil {
+		return x.CreatedAt
+	}
+	return 0
+}
+
+func (x *Key) GetUpdatedAt() int32 {
+	if x != nil {
+		return x.UpdatedAt
+	}
+	return 0
+}
+
+func (x *Key) GetTags() []string {
+	if x != nil {
+		return x.Tags
+	}
+	return nil
+}
+
+func (x *Key) GetSet() string {
+	if x != nil {
+		return x.Set
+	}
+	return ""
+}
+
+func (x *Key) GetName() string {
+	if x != nil {
+		return x.Name
+	}
+	return ""
+}
+
+func (x *Key) GetKid() string {
+	if x != nil {
+		return x.Kid
+	}
+	return ""
+}
+
+func (x *Key) GetJwk() string {
+	if x != nil {
+		return x.Jwk
+	}
+	return ""
+}
+
+func (x *Key) GetPem() string {
+	if x != nil {
+		return x.Pem
+	}
+	return ""
+}
+
+func (x *Key) GetKeyFormat() KeyFormat {
+	if x != nil {
+		return x.KeyFormat
+	}
+	return KeyFormat_KEY_FORMAT_UNSPECIFIED
+}
+
+var File_kong_admin_model_v1_key_proto protoreflect.FileDescriptor
+
+var file_kong_admin_model_v1_key_proto_rawDesc = []byte{
+	0x0a, 0x1d, 0x6b, 0x6f, 0x6e, 0x67, 0x2f, 0x61, 0x64, 0x6d, 0x69, 0x6e, 0x2f, 0x6d, 0x6f, 0x64,
+	0x65, 0x6c, 0x2f, 0x76, 0x31, 0x2f, 0x6b, 0x65, 0x79, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12,
+	0x13, 0x6b, 0x6f, 0x6e, 0x67, 0x2e, 0x61, 0x64, 0x6d, 0x69, 0x6e, 0x2e, 0x6d, 0x6f, 0x64, 0x65,
+	0x6c, 0x2e, 0x76, 0x31, 0x22, 0x82, 0x02, 0x0a, 0x03, 0x4b, 0x65, 0x79, 0x12, 0x0e, 0x0a, 0x02,
+	0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x02, 0x69, 0x64, 0x12, 0x1d, 0x0a, 0x0a,
+	0x63, 0x72, 0x65, 0x61, 0x74, 0x65, 0x64, 0x5f, 0x61, 0x74, 0x18, 0x02, 0x20, 0x01, 0x28, 0x05,
+	0x52, 0x09, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65, 0x64, 0x41, 0x74, 0x12, 0x1d, 0x0a, 0x0a, 0x75,
+	0x70, 0x64, 0x61, 0x74, 0x65, 0x64, 0x5f, 0x61, 0x74, 0x18, 0x03, 0x20, 0x01, 0x28, 0x05, 0x52,
+	0x09, 0x75, 0x70, 0x64, 0x61, 0x74, 0x65, 0x64, 0x41, 0x74, 0x12, 0x12, 0x0a, 0x04, 0x74, 0x61,
+	0x67, 0x73, 0x18, 0x04, 0x20, 0x03, 0x28, 0x09, 0x52, 0x04, 0x74, 0x61, 0x67, 0x73, 0x12, 0x10,
+	0x0a, 0x03, 0x73, 0x65, 0x74, 0x18, 0x05, 0x20, 0x01, 0x28, 0x09, 0x52, 0x03, 0x73, 0x65, 0x74,
+	0x12, 0x12, 0x0a, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x06, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04,
+	0x6e, 0x61, 0x6d, 0x65, 0x12, 0x10, 0x0a, 0x03, 0x6b, 0x69, 0x64, 0x18, 0x07, 0x20, 0x01, 0x28,
+	0x09, 0x52, 0x03, 0x6b, 0x69, 0x64, 0x12, 0x10, 0x0a, 0x03, 0x6a, 0x77, 0x6b, 0x18, 0x08, 0x20,
+	0x01, 0x28, 0x09, 0x52, 0x03, 0x6a, 0x77, 0x6b, 0x12, 0x10, 0x0a, 0x03, 0x70, 0x65, 0x6d, 0x18,
+	0x09, 0x20, 0x01, 0x28, 0x09, 0x52, 0x03, 0x70, 0x65, 0x6d, 0x12, 0x3d, 0x0a, 0x0a, 0x6b, 0x65,
+	0x79, 0x5f, 0x66, 0x6f, 0x72, 0x6d, 0x61, 0x74, 0x18, 0x0a, 0x20, 0x01, 0x28, 0x0e, 0x32, 0x1e,
+	0x2e, 0x6b, 0x6f, 0x6e, 0x67, 0x2e, 0x61, 0x64, 0x6d, 0x69, 0x6e, 0x2e, 0x6d, 0x6f, 0x64, 0x65,
+	0x6c, 0x2e, 0x76, 0x31, 0x2e, 0x4b, 0x65, 0x79, 0x46, 0x6f, 0x72, 0x6d, 0x61, 0x74, 0x52, 0x09,
+	0x6b, 0x65, 0x79, 0x46, 0x6f, 0x72, 0x6d, 0x61, 0x74, 0x2a, 0x63, 0x0a, 0x09, 0x4b, 0x65, 0x79,
+	0x46, 0x6f, 0x72, 0x6d, 0x61, 0x74, 0x12, 0x1a, 0x0a, 0x16, 0x4b, 0x45, 0x59, 0x5f, 0x46, 0x4f,
+	0x52, 0x4d, 0x41, 0x54, 0x5f, 0x55, 0x4e, 0x53, 0x50, 0x45, 0x43, 0x49, 0x46, 0x49, 0x45, 0x44,
+	0x10, 0x00, 0x12, 0x12, 0x0a, 0x0e, 0x4b, 0x45, 0x59, 0x5f, 0x46, 0x4f, 0x52, 0x4d, 0x41, 0x54,
+	0x5f, 0x4a, 0x57, 0x4b, 0x10, 0x01, 0x12, 0x12, 0x0a, 0x0e, 0x4b, 0x45, 0x59, 0x5f, 0x46, 0x4f,
+	0x52, 0x4d, 0x41, 0x54, 0x5f, 0x50, 0x45, 0x4d, 0x10, 0x02, 0x12, 0x12, 0x0a, 0x0e, 0x4b, 0x45,
+	0x59, 0x5f, 0x46, 0x4f, 0x52, 0x4d, 0x41, 0x54, 0x5f, 0x4b, 0x49, 0x44, 0x10, 0x03, 0x42, 0x3f,
+	0x5a, 0x3d, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x6b, 0x6f, 0x6e,
+	0x67, 0x2f, 0x6b, 0x6f, 0x6b, 0x6f, 0x2f, 0x69, 0x6e, 0x74, 0x65, 0x72, 0x6e, 0x61, 0x6c, 0x2f,
+	0x67, 0x65, 0x6e, 0x2f, 0x67, 0x72, 0x70, 0x63, 0x2f, 0x6b, 0x6f, 0x6e, 0x67, 0x2f, 0x61, 0x64,
+	0x6d, 0x69, 0x6e, 0x2f, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x2f, 0x76, 0x31, 0x3b, 0x76, 0x31, 0x62,
+	0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+}
+
+var (
+	file_kong_admin_model_v1_key_proto_rawDescOnce sync.Once
+	file_kong_admin_model_v1_key_proto_rawDescData = file_kong_admin_model_v1_key_proto_rawDesc
+)
+
+func file_kong_admin_model_v1_key_proto_rawDescGZIP() []byte {
+	file_kong_admin_model_v1_key_proto_rawDescOnce.Do(func() {
+		file_kong_admin_model_v1_key_proto_rawDescData = protoimpl.X.CompressGZIP(file_kong_admin_model_v1_key_proto_rawDescData)
+	})
+	return file_kong_admin_model_v1_key_proto_rawDescData
+}
+
+var file_kong_admin_model_v1_key_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
+var file_kong_admin_model_v1_key_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_kong_admin_model_v1_key_proto_goTypes = []interface{}{
+	(KeyFormat)(0), // 0: kong.admin.model.v1.KeyFormat
+	(*Key)(nil),    // 1: kong.admin.model.v1.Key
+}
+var file_kong_admin_model_v1_key_proto_depIdxs = []int32{
+	0, // 0: kong.admin.model.v1.Key.key_format:type_name -> kong.admin.model.v1.KeyFormat
+	1, // [1:1] is the sub-list for method output_type
+	1, // [1:1] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
+}
+
+func init() { file_kong_admin_model_v1_key_proto_init() }
+func file_kong_admin_model_v1_key_proto_init() {
+	if File_kong_admin_model_v1_key_proto != nil {
+		return
+	}
+	if !protoimpl.UnsafeEnabled {
+		file_kong_admin_model_v1_key_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*Key); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_kong_admin_model_v1_key_proto_rawDesc,
+			NumEnums:      1,
+			NumMessages:   1,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_kong_admin_model_v1_key_proto_goTypes,
+		DependencyIndexes: file_kong_admin_model_v1_key_proto_depIdxs,
+		EnumInfos:         file_kong_admin_model_v1_key_proto_enumTypes,
+		MessageInfos:      file_kong_admin_model_v1_key_proto_msgTypes,
+	}.Build()
+	File_kong_admin_model_v1_key_proto = out.File
+	file_kong_admin_model_v1_key_proto_rawDesc = nil
+	file_kong_admin_model_v1_key_proto_goTypes = nil
+	file_kong_admin_model_v1_key_proto_depIdxs = nil
+}
